--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,19 @@
 .square {
   display: flex;
-  width: 19px;
-  height: 19px;
-  border: 2px, solid, black;
+  background-color: white;
+  width: 49.0625px;
+  height: 49.0625px;
 }
 .grid {
   display: flex;
   flex-wrap: wrap;
-  width: 368px;
+  width: 800px;
+  height: 800px;
   align-items: center;
-  padding: 200px;
+  margin-top: 80px;
+  background-color: black;
+  gap: 1px;
+  border: 2px solid black;
 }
 
 body {
@@ -19,10 +23,10 @@ body {
 }
 
 .onHover:hover {
-  background-color: black;
-  opacity: 0.4;
+  background-color: grey;
+  opacity: 0.5;
 }
 
-.drawnBox {
+.drawnSquare {
   background-color: black;
 }
